[gd_scene load_steps=13 format=3 uid="uid://citqaeuav6del"]

[ext_resource type="PackedScene" uid="uid://dbuqn5jxrvv0k" path="res://shells/shell.tscn" id="1_1tad4"]
[ext_resource type="PackedScene" uid="uid://ojwlvk1tllof" path="res://components/body_parts/rocket_launcher.tscn" id="2_awkbc"]
[ext_resource type="PackedScene" uid="uid://dvc16qrehqp2h" path="res://ghosts/revenant_ghost.tscn" id="2_jbdga"]
[ext_resource type="PackedScene" uid="uid://bbvuowxymf0du" path="res://components/states/state_machine.tscn" id="3_w057o"]
[ext_resource type="Script" path="res://components/states/shell_states/ground_move.gd" id="4_p2g3i"]
[ext_resource type="Script" path="res://components/states/body_state_machine.gd" id="4_vofwq"]
[ext_resource type="Script" path="res://components/states/shell_states/fall.gd" id="5_yhnrt"]
[ext_resource type="Script" path="res://components/states/shell_states/down.gd" id="6_ibufv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qocax"]
radius = 0.552478
height = 2.06935

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ws6mh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jbynq"]
albedo_color = Color(1, 0.145098, 0.282353, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cldw3"]
material = SubResource("StandardMaterial3D_jbynq")

[node name="Shell4" instance=ExtResource("1_1tad4")]

[node name="Hitbox" parent="." index="0"]
damage_multiplier = 1.0
kinetic_mult = 1.2
explosive_mult = 0.4
plasma_mult = 1.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox" index="0"]
shape = SubResource("CapsuleShape3D_qocax")

[node name="BodyInformation" parent="PlayerUI" index="2"]
shell_name = "Revenant"
shell_description = "Armored unit with rocket launchers. try rocket jumping! (Yes, inspired by doom)"

[node name="GhostMount" parent="." index="3" node_paths=PackedStringArray("ghost")]
ghost = NodePath("revenant_ghost")

[node name="revenant_ghost" parent="GhostMount" index="0" node_paths=PackedStringArray("ghost_mount") instance=ExtResource("2_jbdga")]
ghost_mount = NodePath("..")

[node name="Head" parent="." index="4" node_paths=PackedStringArray("ghost_mount")]
ghost_mount = NodePath("../GhostMount")

[node name="RocketLauncher" parent="Head" index="2" node_paths=PackedStringArray("ghost_mount", "hitscan_manager") instance=ExtResource("2_awkbc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.792707, 0, 0)
ghost_mount = NodePath("../../GhostMount")
hitscan_manager = NodePath("../HitscanManager")
muzzle_speed = 26.0

[node name="RocketLauncher2" parent="Head" index="3" node_paths=PackedStringArray("ghost_mount", "hitscan_manager") instance=ExtResource("2_awkbc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.738479, 0, 0)
ghost_mount = NodePath("../../GhostMount")
hitscan_manager = NodePath("../HitscanManager")
muzzle_speed = 26.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="5"]
shape = SubResource("CapsuleShape3D_ws6mh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="6"]
mesh = SubResource("CapsuleMesh_cldw3")

[node name="StateMachine" parent="." index="7" node_paths=PackedStringArray("ghost_mount", "down_state", "initial_state") instance=ExtResource("3_w057o")]
script = ExtResource("4_vofwq")
ghost_mount = NodePath("../GhostMount")
down_state = NodePath("Down")
initial_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("fall_state")]
script = ExtResource("4_p2g3i")
fall_state = NodePath("../Fall")
jump_height = 3.7

[node name="Fall" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("move_state")]
script = ExtResource("5_yhnrt")
move_state = NodePath("../Move")
gravity = -9.0

[node name="Down" type="Node" parent="StateMachine" index="2"]
script = ExtResource("6_ibufv")

[connection signal="died" from="HealthComponent" to="StateMachine" method="_on_health_component_died"]

[editable path="Head"]
